--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -27,6 +27,32 @@
 </head>
 
 <body>
+<!-- ======= Header =======-->
+<header class="header fixed-top d-flex align-items-center" id="header">
+  <div class="container d-flex align-items-center justify-content-between">
+    <a class="logo d-flex align-items-center me-auto me-lg-0" href="index.html">
+      <h1> EASY <span>RENT.</span></h1>
+    </a>
+
+    <nav class="navbar" id="navbar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#cars">Cars</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#Register-customer-new">Register</a></li>
+      </ul>
+
+    </nav>
+    <!--navbar-->
+    <a class="btn-login-user" href="pages/login.html">Login</a>
+    <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+    <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+
+  </div>
+</header>
+<!-- End Header-->
 
 </body>
 </html>
