--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/normalize.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/vendor/normalize.css">
   <link href="assets/fonts/css/all.min.css" rel="stylesheet">
 
   <link href="assets/vendor/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,66 +20,56 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/sweetalert2-11.6.16/sweetalert2.min.css" rel="stylesheet">
+
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-</head>
 
+</head>
 <body>
-<!-- ======= Header =======-->
-<header class="header fixed-top d-flex align-items-center" id="header">
+
+<header id="header" class="header fixed-top d-flex align-items-center">
   <div class="container d-flex align-items-center justify-content-between">
-    <a class="logo d-flex align-items-center me-auto me-lg-0" href="index.html">
-      <h1> EASY <span>RENT.</span></h1>
+
+    <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
+      <h1>CAR <span>RENT.</span></h1>
     </a>
 
-    <nav class="navbar" id="navbar">
+    <nav id="navbar" class="navbar">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="#hero">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#cars">Cars</a></li>
+        <li><a href="#menu">Menu</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#Register-customer-new">Register</a></li>
       </ul>
-
-    </nav>
-    <!--navbar-->
-    <a class="btn-login-user" href="pages/login.html">Login</a>
+      <a class="btn-Register-customer-new" href="#">Register</a>
+    </nav><!-- .navbar -->
+    <a class="btn-login-user" href="#">Login</a>
     <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
     <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
   </div>
 </header>
-<!-- End Header-->
+<!-- End Header -->
 
-<!--======= Hero Section =======-->
-<section class="hero d-flex align-items-center section-bg" id="hero">
-  <div class="container">
-    <div class="row justify-content-between gy-5">
-      <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-        <h2 data-aos="fade-up">Fast &amp; Easy Way To <br>Rent A Car</h2>
-        <p data-aos="fade-up" data-aos-delay="100">Search & Compare the World's Leading <span
-                style=" font-weight: 600;">Car Rental</span> Suppliers Today! No Credit Card Fees. We Speak Your
-          Language. Unbeatable Prices. Destinations: Spain, France, Italy, UK, USA, Portugal, Greece,
-          Australia, Ireland, Switzerland.</p>
-        <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-          <a class="btn-Register-customer-new" href="#Register-customer-new">Register</a>
-          <a class="glightbox btn-watch-video d-flex align-items-center" href="https://vimeo.com/290450151"><i
-                  class="bi bi-play-circle"></i><span>Watch Video</span></a>
-        </div>
-      </div>
-      <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-        <img alt="" class="img-fluid img-size" data-aos="zoom-out" data-aos-delay="300"
-             src="assets/img/mainCar.png">
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End Hero Section-->
 
-<!-- ======= main =======-->
+
+
+
+
+
+<!-- Vendor JS Files -->
+<script src="assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+<script src="assets/vendor/jQuery/jquery-3.6.1.min.js"></script>
+
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
