--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -60,9 +60,9 @@
         <p data-aos="fade-up" data-aos-delay="100">Search & Compare the World's Leading <span style=" font-weight: 600;">Car Rental</span> Suppliers Today! No Credit Card Fees. We Speak Your Language. Unbeatable Prices. Destinations: Spain, France, Italy, UK, USA, Portugal, Greece, Australia, Ireland, Switzerland.</p>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
           <a class="btn-Register-customer-new" href="#">Register</a>
-          <a href="https://vimeo.com/290450151"
-             class="glightbox btn-watch-video d-flex align-items-center"><i
-                  class="bi bi-play-circle"></i><span>Watch Video</span></a>
+<!--          <a href="https://vimeo.com/290450151"-->
+<!--             class="glightbox btn-watch-video d-flex align-items-center"><i-->
+<!--                  class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
         </div>
       </div>
       <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
