--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -32,7 +32,7 @@
   <div class="container d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
-      <h1>CAR <span>RENT.</span></h1>
+      <h1>Easy<span>Rent</span></h1>
     </a>
     <nav id="navbar" class="navbar">
       <ul>
@@ -56,7 +56,7 @@
   <div class="container">
     <div class="row justify-content-between gy-5">
       <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-        <h2 data-aos="fade-up">Fast &amp; Easy Way To <br>Rent A Car</h2>
+        <h2 data-aos="fade-up">Easy Way To <br>Rent A Car</h2>
         <p data-aos="fade-up" data-aos-delay="100">Search & Compare the World's Leading <span style=" font-weight: 600;">Car Rental</span> Suppliers Today! No Credit Card Fees. We Speak Your Language. Unbeatable Prices. Destinations: Spain, France, Italy, UK, USA, Portugal, Greece, Australia, Ireland, Switzerland.</p>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
           <a class="btn-Register-customer-new" href="#">Register</a>
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-        <img src="assets/img/mainCar.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
+        <img src="assets/img/cars/bmwi8.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
       </div>
     </div>
   </div>
