--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -41,9 +41,10 @@
         <li><a href="#">Cars</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
+        <li><a href="#Register-customer-new">Register</a></li>
       </ul>
-      <a class="btn-Register-customer-new" href="#">Register</a>
-    </nav><!-- .navbar -->
+    </nav>
+    <!-- .navbar -->
     <a class="btn-login-user" href="#">Login</a>
     <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
     <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -59,7 +60,7 @@
         <h2 data-aos="fade-up">Easy Way To <br>Rent A Car</h2>
         <p data-aos="fade-up" data-aos-delay="100">Search & Compare the World's Leading <span style=" font-weight: 600;">Car Rental</span> Suppliers Today! No Credit Card Fees. We Speak Your Language. Unbeatable Prices. Destinations: Spain, France, Italy, UK, USA, Portugal, Greece, Australia, Ireland, Switzerland.</p>
         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-          <a class="btn-Register-customer-new" href="#">Register</a>
+          <a class="btn-Register-customer-new" href="#Register-customer-new">Register</a>
 <!--          <a href="https://vimeo.com/290450151"-->
 <!--             class="glightbox btn-watch-video d-flex align-items-center"><i-->
 <!--                  class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
@@ -72,6 +73,24 @@
   </div>
 </section>
 <!-- End Hero Section -->
+
+<!-- ======= main ======= -->
+<main id="main">
+</main>
+<!-- End #main -->
+
+<!-- ======= Book A Table Section ======= -->
+<section id="Register-customer-new" class="Register-customer-new">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-header">
+      <h2>Register A Customer</h2>
+      <p>Register <span>Your Stay</span> With Us</p>
+    </div>
+
+  </div>
+</section>
+<!-- End Book A Table Section -->
 
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
