--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -88,6 +88,17 @@
       <p>Register <span>Your Stay</span> With Us</p>
     </div>
 
+    <div class="row g-0">
+
+      <div class="col-lg-4 register-img" style="background-image: url(assets/img/reg_Customer_main.jpg);"
+           data-aos="zoom-out" data-aos-delay="200"></div>
+
+      <div class="col-lg-8 d-flex align-items-center register-form-bg sectionBorder">
+
+      </div><!-- End Reservation Form -->
+
+    </div>
+
   </div>
 </section>
 <!-- End Book A Table Section -->
