--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -94,7 +94,56 @@
            data-aos="zoom-out" data-aos-delay="200"></div>
 
       <div class="col-lg-8 d-flex align-items-center register-form-bg sectionBorder">
+        <form action="customer" method="post" role="form" class="reg-customer-form" id="customerForm"
+              data-aos="fade-up" data-aos-delay="100">
+          <div class="row gy-4">
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="id" class="form-control" id="cusId" placeholder="C00-001" disabled>
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="fName" class="form-control" id="firstName" placeholder="First Name">
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="lName" class="form-control" id="lastName" placeholder="Last Name">
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="contact" class="form-control" id="contactNum" placeholder="Contact Number">
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="email" class="form-control" id="email" placeholder="Email Address">
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="nic" class="form-control" id="nicNo" placeholder="National ID">
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="text" name="license" class="form-control" id="licenseNo" placeholder="Driving License">
+              <span class="control-error"></span>
+            </div>
+            <div class="col-lg-6 col-md-8">
+              <input type="password" name="password" class="form-control" id="userPassword" placeholder="Enter Password">
+              <span class="control-error"></span>
+            </div>
 
+          </div>
+
+
+          <div class="mb-3">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your registration request was successfully.Please click login button. Thank you!
+            </div>
+          </div>
+
+          <div class="text-center">
+            <button class="btn btn-success mt-2 m-2" id="btnSaveCustomer" type="button">REGISTER</button>
+          </div>
+        </form>
       </div><!-- End Reservation Form -->
 
     </div>
