--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -129,9 +129,17 @@
               <input type="password" name="password" class="form-control" id="userPassword" placeholder="Enter Password">
               <span class="control-error"></span>
             </div>
-
+            <div class="input-group mb-3 col-lg-6 col-md-8 width">
+              <input type="file" class="form-control" id="nicNoImage">
+              <label class="input-group-text" for="nicNoImage">Upload NIC</label>
+              <span class="control-error"></span>
+            </div>
+            <div class="input-group mb-3 col-lg-6 col-md-8 width">
+              <input type="file" class="form-control" id="licenseNoImage">
+              <label class="input-group-text" for="licenseNoImage">Upload Driving License</label>
+              <span class="control-error"></span>
+            </div>
           </div>
-
 
           <div class="mb-3">
             <div class="loading">Loading</div>
