index file updated

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -193,54 +193,74 @@
 <!-- End Register A Customer -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer" class="footer">
+<footer class="footer " id="footer ">
 
-  <div class="container">
-    <div class="row gy-3">
-      <div class="col-lg-3 col-md-6 d-flex">
-        <i class="bi bi-geo-alt icon"></i>
+  <div class="container ">
+    <div class="row gy-3 ">
+      <div class="col-lg-3 col-md-6 d-flex ">
+        <i class="bi bi-geo-alt icon "></i>
         <div>
           <h4>Address</h4>
           <p>
-            No. 25,<br> Galle Road, Matara.
+            No. 25,Galle Road,<br> Matara.
           </p>
         </div>
 
       </div>
 
-      <div class="col-lg-3 col-md-6 footer-links d-flex">
-        <i class="bi bi-telephone icon"></i>
+      <div class="col-lg-3 col-md-6 footer-links d-flex ">
+        <i class="bi bi-telephone icon "></i>
         <div>
           <h4>Reservations</h4>
           <p>
-            <strong>Phone:</strong> +94 414 755 985<br>
-            <strong>Email:</strong> easy@gmail.com<br>
+            <strong>Phone :</strong> +94 41 984 174<br>
+            <strong>Email :</strong> esay@gmail.com<br>
           </p>
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 footer-links d-flex">
-        <i class="bi bi-clock icon"></i>
+      <div class="col-lg-3 col-md-6 footer-links d-flex ">
+        <i class="bi bi-clock icon "></i>
         <div>
           <h4>Opening Hours</h4>
-          <p><strong> Mon - Sun : 8.30AM - 7.30PM </strong></p>
+          <p><strong> Mon - Sat : 7.30AM-7.30PM </strong><br>Sunday : Closed</p>
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 footer-links">
+      <div class="col-lg-3 col-md-6 footer-links ">
         <h4>Follow Us</h4>
-        <div class="social-links d-flex">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <div class="social-links d-flex ">
+          <a class="twitter " href="# "><i class="bi bi-twitter "></i></a>
+          <a class="facebook " href="# "><i class="bi bi-facebook "></i></a>
+          <a class="instagram " href="# "><i class="bi bi-instagram "></i></a>
         </div>
       </div>
-
     </div>
   </div>
 
-  <div class="container">
-    <div class="copyright">&copy; Copyright <strong><span>Easy Car Rent</span></strong>. All Rights Reserved.</div>
+  <ul class="nav justify-content-center mt-2 ">
+    <li class="nav-item ">
+      <a class="nav-link text " href="# ">Home</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link text " href="#about">About</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link text " href="#car">Car</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link text " href="#gallery">Gallery</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link text " href="#contact ">Contact</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link text " href="#Register-customer-new ">Register</a>
+    </li>
+  </ul>
+
+  <div class="container ">
+    <div class="copyright ">&copy; Copyright <strong><span>Easy Rent</span></strong>. All Rights Reserved.</div>
   </div>
 
 </footer>
