--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -76,6 +76,28 @@
 
 <!-- ======= main ======= -->
 <main id="main">
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-header">
+        <h2>About Us</h2>
+        <p>Learn More <span>About Us</span></p>
+      </div>
+
+      <div class="row gy-4">
+        <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about-1.jpg); "
+             data-aos="fade-up" data-aos-delay="150">
+          <div class="call-us position-absolute">
+            <h4>Have a Questions ?</h4>
+            <p>+94 41 420 7354</p>
+          </div>
+        </div>
+
+    </div>
+  </section>
+  <!-- End About Section -->
+
 </main>
 <!-- End #main -->
 
