--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -93,6 +93,31 @@
             <p>+94 41 420 7354</p>
           </div>
         </div>
+        <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
+          <div class="content ps-0 ps-lg-5">
+            <p class="fst-italic">
+              Welcome To Easy Car Rental
+              We Provide Everything You Need To A Car
+            </p>
+            <ul>
+              <li><i class="bi bi-check2-all"></i> Dropping a Best Rent a Car car off is reasonably quick and easy.
+              </li>
+              <li><i class="bi bi-check2-all"></i>  Picking a Best Rent a Car car up is reasonably quick and easy.
+              </li>
+              <li><i class="bi bi-check2-all"></i> Our customers said Best Rent a Car are reasonably easy to find.
+              </li>
+            </ul>
+            <p>
+              Car rental agencies primarily serve people who require a temporary vehicle, for example, those who do not own their own car, travelers who are out of town, or owners of damaged or destroyed vehicles who are awaiting repair or insurance compensation.
+            </p>
+
+            <div class="position-relative mt-4">
+              <img src="assets/img/about-image-2.jpg" class="img-fluid" alt="">
+              <a href="" class="glightbox play-btn"></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </section>
