--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -76,8 +76,9 @@
 
 <!-- ======= main ======= -->
 <main id="main">
-  <!-- ======= About Section ======= -->
-  <section id="about" class="about">
+
+  <!--     ======= About Section =======-->
+  <section class="about" id="about">
     <div class="container" data-aos="fade-up">
 
       <div class="section-header">
@@ -86,34 +87,46 @@
       </div>
 
       <div class="row gy-4">
-        <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about-1.jpg); "
-             data-aos="fade-up" data-aos-delay="150">
+        <div class="col-lg-7 position-relative about-img"
+             data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/about-1.jpg); ">
           <div class="call-us position-absolute">
             <h4>Have a Questions ?</h4>
-            <p>+94 41 420 7354</p>
+            <p>+94 11 420 7354</p>
           </div>
         </div>
         <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
           <div class="content ps-0 ps-lg-5">
             <p class="fst-italic">
-              Welcome To Easy Car Rental
-              We Provide Everything You Need To A Car
+              Welcome To Easy Car Rental We Provide Everything You Need To A Car
             </p>
             <ul>
-              <li><i class="bi bi-check2-all"></i> Dropping a Best Rent a Car car off is reasonably quick and easy.
+              <li><i class="bi bi-check2-all"></i> A customer comes to the website and register.
               </li>
-              <li><i class="bi bi-check2-all"></i>  Picking a Best Rent a Car car up is reasonably quick and easy.
+              <li><i class="bi bi-check2-all"></i> Then, the customer can select a car, Pick up time and
+                date, and other required details.
               </li>
-              <li><i class="bi bi-check2-all"></i> Our customers said Best Rent a Car are reasonably easy to find.
+              <li><i class="bi bi-check2-all"></i> The customer has to make the Loss Damage Waiver payment
+                to the given bank account information of the car rental and upload the bank slip or the
+                bank confirmation to the dedicated field in
+                the renting view.
+              </li>
+              <li><i class="bi bi-check2-all"></i> If a driver is requested by the customer, a driver is
+                randomly assigned to accommodate the customer.
+              </li>
+              <li><i class="bi bi-check2-all"></i> After the customer returns the car, he/she has to make
+                the payment and the rental process will be finalized.
               </li>
             </ul>
             <p>
-              Car rental agencies primarily serve people who require a temporary vehicle, for example, those who do not own their own car, travelers who are out of town, or owners of damaged or destroyed vehicles who are awaiting repair or insurance compensation.
+
+              If the vehicle is unharmed the Loss Damage Waiver will be returned in full to the customer.
+              <br><span style="color: var(--color-primary-red)">(Engine faults and malfunctions in the car will not count when deductions are made
+                            from the Loss Damage Waiver)</span>
             </p>
 
             <div class="position-relative mt-4">
-              <img src="assets/img/about-image-2.jpg" class="img-fluid" alt="">
-              <a href="" class="glightbox play-btn"></a>
+              <img alt="" class="img-fluid" src="assets/img/about-image-2.jpg">
+              <a class="glightbox play-btn" href=""></a>
             </div>
           </div>
         </div>
@@ -121,7 +134,7 @@
 
     </div>
   </section>
-  <!-- End About Section -->
+  <!--     End About Section-->
 
 </main>
 <!-- End #main -->
