--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -89,10 +89,10 @@
       <div class="row gy-4">
         <div class="col-lg-7 position-relative about-img"
              data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/about-1.jpg); ">
-          <div class="call-us position-absolute">
-            <h4>Have a Questions ?</h4>
-            <p>+94 11 420 7354</p>
-          </div>
+<!--          <div class="call-us position-absolute">-->
+<!--&lt;!&ndash;            <h4>Have a Questions ?</h4>&ndash;&gt;-->
+<!--&lt;!&ndash;            <p>+94 41 420 7354</p>&ndash;&gt;-->
+<!--          </div>-->
         </div>
         <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
           <div class="content ps-0 ps-lg-5">
