--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -136,6 +136,39 @@
   </section>
   <!--     End About Section-->
 
+  <!-- ======= Car Section ======= -->
+  <section class="cars" id="cars">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-header">
+        <h2>Our Cars</h2>
+        <p>Check Our <span>Car Stock</span></p>
+      </div>
+
+      <div class="form-container sectionBorder">
+
+      </div>
+      <div id="carSection"></div>
+    </div>
+
+    <div class="card-body mt-5 d-flex justify-content-center">
+      <!-- Basic Pagination -->
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="">Previous</a></li>
+          <li aria-current="page" class="page-item active"><a class="page-link" href="">1</a></li>
+          <li class="page-item"><a class="page-link" href="">2</a></li>
+          <li class="page-item"><a class="page-link" href="">3</a></li>
+          <li class="page-item"><a class="page-link" href="">Next</a></li>
+        </ul>
+      </nav><!-- End Basic Pagination -->
+    </div>
+
+  </section>
+  <!-- End Car Section -->
+
+
+
 </main>
 <!-- End #main -->
 
