contac section added

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -248,6 +248,19 @@
   </section>
   <!-- End Register A Customer -->
 
+  <!-- ======= Contact Section ======= -->
+  <section class="contact" id="contact">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-header">
+        <h2>Contact</h2>
+        <p>Need Help? <span>Contact Us</span></p>
+      </div>
+
+    </div>
+  </section>
+  <!-- End Contact Section -->
+
 </main>
 <!-- End #main -->
 
