--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -256,7 +256,56 @@
         <h2>Contact</h2>
         <p>Need Help? <span>Contact Us</span></p>
       </div>
+      <div class="row gy-4 mt-3">
 
+        <div class="col-md-6 ">
+          <div class="info-item d-flex align-items-center sectionBorder ">
+            <i class="icon bi bi-map flex-shrink-0 "></i>
+            <div>
+              <h3>Our Address</h3>
+              <p>No. 25,Galle Road,Matara.</p>
+            </div>
+          </div>
+        </div>
+        <!-- End Info Item -->
+
+        <div class="col-md-6 ">
+          <div class="info-item d-flex align-items-center sectionBorder ">
+            <i class="icon bi bi-envelope flex-shrink-0 "></i>
+            <div>
+              <h3>Email Us</h3>
+              <p>esay@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <!-- End Info Item -->
+
+        <div class="col-md-6 ">
+          <div class="info-item d-flex align-items-center sectionBorder ">
+            <i class="icon bi bi-telephone flex-shrink-0 "></i>
+            <div>
+              <h3>Call Us</h3>
+              <p>+94 11 420 7354</p>
+            </div>
+          </div>
+        </div>
+        <!-- End Info Item -->
+
+        <div class="col-md-6 ">
+          <div class="info-item d-flex align-items-center sectionBorder ">
+            <i class="icon bi bi-share flex-shrink-0 "></i>
+            <div>
+              <h3>Opening Hours</h3>
+              <div><strong>Mon - Sat:</strong> 24 Hours<br>
+                <strong>Sunday:</strong> Closed
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <!-- End Info Item -->
+
+      </div>
     </div>
   </section>
   <!-- End Contact Section -->
