--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -37,9 +37,9 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#">Cars</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="#Register-customer-new">Register</a></li>
       </ul>
     </nav>
