car section added

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -127,6 +127,19 @@
   </section>
     <!--     End About Section-->
 
+    <!-- ======= Car Section ======= -->
+    <section class="cars" id="cars">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-header">
+          <h2>Our Cars</h2>
+          <p>Check Our <span>Car Stock</span></p>
+        </div>
+
+      </div>
+    </section>
+    <!-- End Car Section -->
+
     <!-- ======= Register A Customer ======= -->
     <section class="Register-customer-new" id="Register-customer-new">
     <div class="container" data-aos="fade-up">
