cars form added

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -136,6 +136,18 @@
           <p>Check Our <span>Car Stock</span></p>
         </div>
 
+        <div class="form-container sectionBorder">
+          <form action="" id="form-control">
+            <div class="input-box">
+              <span class="span m-1"> Car Name</span>
+              <input id="cName" name="" placeholder="Car Name" type="search">
+            </div>
+
+            <button class="btn" id="searchBtn" name="" type="button">Search</button>
+          </form>
+        </div>
+        <div id="carSection"></div>
+
       </div>
     </section>
     <!-- End Car Section -->
