cars form details added

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -142,7 +142,31 @@
               <span class="span m-1"> Car Name</span>
               <input id="cName" name="" placeholder="Car Name" type="search">
             </div>
-
+            <div class="input-box">
+              <span class="span m-1">Fuel Type</span>
+              <select class="form-control" id="fuelType">
+                <option value="">Choose Type</option>
+                <option value="DIESEL">DIESEL</option>
+                <option value="PETROL">PETROL</option>
+              </select>
+            </div>
+            <div class="input-box">
+              <span class="span m-1">Car Type</span>
+              <select class="form-control" id="carType">
+                <option value="">Choose Type</option>
+                <option value="GENERAL">GENERAL</option>
+                <option value="LUXURY">LUXURY</option>
+                <option value="PREMIUM">PREMIUM</option>
+              </select>
+            </div>
+            <div class="input-box">
+              <span class="span m-1">Transmission Type</span>
+              <select class="form-control" id="cTransmission">
+                <option value="">Choose Type</option>
+                <option value="AUTO">AUTO</option>
+                <option value="MANUAL">MANUAL</option>
+              </select>
+            </div>
             <button class="btn" id="searchBtn" name="" type="button">Search</button>
           </form>
         </div>
