--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -38,7 +38,7 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#">Cars</a></li>
+        <li><a href="#cars">Cars</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#Register-customer-new">Register</a></li>
       </ul>
@@ -426,9 +426,9 @@
         <div class="col-lg-3 col-md-6 footer-links ">
           <h4>Follow Us</h4>
           <div class="social-links d-flex ">
-            <a class="twitter " href="# "><i class="bi bi-twitter "></i></a>
-            <a class="facebook " href="# "><i class="bi bi-facebook "></i></a>
-            <a class="instagram " href="# "><i class="bi bi-instagram "></i></a>
+            <a class="twitter " href="#"><i class="bi bi-twitter "></i></a>
+            <a class="facebook " href="#"><i class="bi bi-facebook "></i></a>
+            <a class="instagram " href="#"><i class="bi bi-instagram "></i></a>
           </div>
         </div>
       </div>
@@ -436,19 +436,19 @@
 
     <ul class="nav justify-content-center mt-2 ">
       <li class="nav-item ">
-        <a class="nav-link text " href="# ">Home</a>
+        <a class="nav-link text " href="#">Home</a>
       </li>
       <li class="nav-item ">
         <a class="nav-link text " href="#about">About</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#car">Car</a>
+        <a class="nav-link text " href="#cars">Car</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#contact ">Contact</a>
+        <a class="nav-link text " href="#contact">Contact</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text " href="#Register-customer-new ">Register</a>
+        <a class="nav-link text " href="#Register-customer-new">Register</a>
       </li>
     </ul>
     <div class="container ">
