login form container added

--- a/Front_End/assets/pages/login.html
+++ b/Front_End/assets/pages/login.html
@@ -17,7 +17,20 @@
 
 <body style="background: #ecf0f1;">
 
+    <div class="container">
 
+        <!-- Outer Row -->
+        <div class="row justify-content-center mt-5">
+
+            <div class="col-xl-10 col-lg-12 col-md-9">
+
+
+
+            </div>
+
+        </div>
+
+    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="../vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
