--- a/Front_End/assets/pages/login.html
+++ b/Front_End/assets/pages/login.html
@@ -24,7 +24,15 @@
 
             <div class="col-xl-10 col-lg-12 col-md-9">
 
+                <div class="card o-hidden border-0 shadow-lg my-6 sectionBorder">
+                    <div class="card-body p-0">
+                        <!-- Nested Row within Card Body -->
+                        <div class="row">
+                            <div class="col-lg-6 d-none d-lg-block" style="background: url(../assets/img/login.webp);background-size: cover"></div>
 
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
