--- a/Front_End/assets/pages/login.html
+++ b/Front_End/assets/pages/login.html
@@ -34,7 +34,16 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
+                                    <form class="user m-2 p-3" id="loginForm">
 
+                                    </form>
+                                    <hr>
+                                    <div class="text-center">
+                                        <a class="small" href="">Forgot Password?</a>
+                                    </div>
+                                    <div class="text-center">
+                                        <a class="small" href="../index.html">Create an Account!</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
