login form details added

--- a/Front_End/assets/pages/login.html
+++ b/Front_End/assets/pages/login.html
@@ -35,6 +35,33 @@
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
                                     <form class="user m-2 p-3" id="loginForm">
+                                        <div class="form-group">
+                                            <select class="form-control" id="role_Type" name="role_Type" style="border-radius: 30px;height: 3.5em">
+                                                <option value="RoleType">Choose Role</option>
+                                                <option value="ADMIN">ADMIN</option>
+                                                <option value="REGISTERED_USER">REGISTERED_USER</option>
+                                                <option value="DRIVER">DRIVER</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group mt-4">
+                                            <input type="text" class="form-control form-control-user"
+                                                id="user_Name" aria-describedby="emailHelp"
+                                                placeholder="Enter User Name...">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control form-control-user"
+                                                id="password" placeholder="Password">
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="custom-control custom-checkbox small">
+                                                <input type="checkbox" class="custom-control-input" id="customCheck">
+                                                <label class="custom-control-label" for="customCheck">Remember
+                                                    Me</label>
+                                            </div>
+                                        </div>
+                                        <button id="btnLogin" type="button" class="btn btn-primary btn-user btn-block">
+                                            Login
+                                        </button>
 
                                     </form>
                                     <hr>
