save and id generator added

--- a/Front_End/assets/index.html
+++ b/Front_End/assets/index.html
@@ -474,5 +474,8 @@
   <!-- Template Main JS File -->
   <script src="js/main.js"></script>
 
+  <!-- Controller JS File -->
+  <script rel="script" src="controller/Reg_UserController.js"></script>
+
 </body>
 </html>
