--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Easy Car Rental</title>
-  <link href="icon/logo.png" rel="icon">
+  <link href="assets/icon/logo.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -12,17 +12,17 @@
         rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link rel="stylesheet" href="vendor/normalize.css">
-  <link href="fonts/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/vendor/normalize.css">
+  <link href="assets/fonts/css/all.min.css" rel="stylesheet">
 
-  <link href="vendor/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="vendor/aos/aos.css" rel="stylesheet">
-  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
 
 </head>
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-        <img src="img/cars/bmwi8.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
+        <img src="assets/img/cars/bmwi8.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300">
       </div>
     </div>
   </div>
@@ -84,7 +84,7 @@
 
       <div class="row gy-4">
         <div class="col-lg-7 position-relative about-img"
-             data-aos="fade-up" data-aos-delay="150" style="background-image: url(img/about-1.jpg); ">
+             data-aos="fade-up" data-aos-delay="150" style="background-image: url(assets/img/about-1.jpg); ">
         </div>
         <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
           <div class="content ps-0 ps-lg-5">
@@ -116,7 +116,7 @@
             </p>
 
             <div class="position-relative mt-4">
-              <img alt="" class="img-fluid" src="img/about-image-2.jpg">
+              <img alt="" class="img-fluid" src="assets/img/about-image-2.jpg">
               <a class="glightbox play-btn" href=""></a>
             </div>
           </div>
@@ -202,7 +202,7 @@
 
         <div class="col-lg-4 register-img sectionBorder"
              data-aos="zoom-out" data-aos-delay="200"
-             style="background-image: url(img/reg_Customer_main.jpg);"></div>
+             style="background-image: url(assets/img/reg_Customer_main.jpg);"></div>
 
         <div class="col-lg-8 d-flex align-items-center register-form-bg sectionBorder">
           <form action="customer" class="reg-customer-form" data-aos="fade-up" data-aos-delay="100"
@@ -463,16 +463,16 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/aos/aos.js"></script>
-  <script src="vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="vendor/php-email-form/validate.js"></script>
-  <script src="vendor/jQuery/jquery-3.6.1.min.js"></script>
+  <script src="assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/jQuery/jquery-3.6.1.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
   <!-- Controller JS File -->
   <script rel="script" src="controller/Reg_UserController.js"></script>
