customer dto added and id generater added to the service vlases

--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -477,5 +477,9 @@
   <!-- Controller JS File -->
   <script rel="script" src="controller/Reg_UserController.js"></script>
 
+  <!-- Util JS File -->
+  <script rel="script" src="util/alert.js"></script>
+  <script rel="script" src="util/validation.js"></script>
+
 </body>
 </html>
