driver dash bord main part added

--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -129,6 +129,16 @@
         </ul>
     </aside>
     <!-- End Sidebar-->
+    <!-- ======= Main ======= -->
+    <main id="main" class="main">
+
+        <div class="pageTitle">
+            <h1>Driver Dashboard</h1>
+
+        </div>
+
+    </main>
+    <!-- End #main -->
 
     <!-- Vendor JS Files -->
     <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
