container section part added

--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -129,12 +129,28 @@
         </ul>
     </aside>
     <!-- End Sidebar-->
+
     <!-- ======= Main ======= -->
     <main id="main" class="main">
 
         <div class="pageTitle">
             <h1>Driver Dashboard</h1>
-
+            <section class="container-fluid mt-3" id="profileDetails">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="">Home</a></li>
+                        <li class="breadcrumb-item active">Profile</li>
+                    </ol>
+                </nav>
+            </section>
+            <section class="container-fluid mt-3" id="driverShedule">
+                <nav>
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item" href="driverDashboard.html">Home</li>
+                        <li class="breadcrumb-item active">Manage / Drivers</li>
+                    </ol>
+                </nav>
+            </section>
         </div>
 
     </main>
