card imformation part added

--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -142,6 +142,15 @@
                         <li class="breadcrumb-item active">Profile</li>
                     </ol>
                 </nav>
+                <div class="row mt-3">
+                    <div class="card info-card">
+                    </div>
+                    <div class="card info-card">
+                        <div class=" row col-12 mb-3 m-2 p-2 d-flex">
+                            <div class=" col-md-6 col-lg-6 col-sm-6 xs-5 img-fluid" style="border: 2px solid black; height: 400px; " id="photoImg"></div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="container-fluid mt-3" id="driverShedule">
                 <nav>
@@ -150,6 +159,10 @@
                         <li class="breadcrumb-item active">Manage / Drivers</li>
                     </ol>
                 </nav>
+                <div class="row mt-3">
+                    <div class="card info-card">
+                    </div>
+                </div>
             </section>
         </div>
 
