detail form added

--- a/Front_End/pages/driverDashboard.html
+++ b/Front_End/pages/driverDashboard.html
@@ -150,6 +150,17 @@
                             <div class="row">
                                 <!-- start col-->
                                 <div class="col-xl-12">
+                                    <form id="customerDetailsForm" class="row">
+                                        <section id="sec1CustomerDetails" class="col-xl-4">
+
+                                        </section>
+                                        <section id="sec2CustomerDetails" class="col-xl-4">
+
+                                        </section>
+                                        <section id="sec3CustomerDetails" class="col-xl-4">
+
+                                        </section>
+                                    </form>
                                 </div>
                                 <!-- end col-->
                             </div>
@@ -180,6 +191,13 @@
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div class="row">
+                                                <div class="table-responsive-xxl flex-grow-0 gap-3 col-xl-8 mt-4 sectionBorder"
+                                                     style="height: 400px; background: white;">
+                                                    <div class="table-responsive customerTableDiv overflow-auto "
+                                                         style="height: 420px;">
+
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <!-- end col-->
