dashboard main section car card added

--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -358,6 +358,26 @@
 
                 <!-- Left side columns -->
                 <div class="col-lg-8">
+                    <div class="row">
+
+                        <!-- Car Card -->
+                        <div class="col-xxl-4 col-md-6">
+                            <div class="card info-card car-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Cars <span>| All Type</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-car-front-fill"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="carCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Car Card -->
+                    </div>
                 </div>
                 <!-- End Left side columns -->
 
