driver card completely added

--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -414,6 +414,65 @@
                         </div>
                         <!-- End Car Card -->
 
+                        <!-- Drivers Card -->
+                        <div class="col-xxl-4 col-md-6">
+                            <div class="card info-card driver-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Driver <span>| All Type</span></h5>
+
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="driverCount">0</h6>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <!-- End Drivers Card -->
+
+                        <!-- Available Drivers Card -->
+                        <div class="col-xxl-4 col-md-6">
+                            <div class="card info-card driver-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Available Driver <span>| Today</span></h5>
+
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="availableDriverCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Drivers Card -->
+
+                        <!-- UnAvailable Drivers Card -->
+                        <div class="col-xxl-4 col-md-6">
+                            <div class="card info-card driver-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">UnAvailable Driver <span>| Today</span></h5>
+
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="unAvailableDriverCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Drivers Card -->
+
                     </div>
                 </div>
                 <!-- End Left side columns -->
