Maintain cards added

--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -493,6 +493,42 @@
                         </div>
                         <!-- End Customers Card -->
 
+                        <!-- Maintain Cars Card -->
+                        <div class="col-xxl-4 col-xl-6">
+                            <div class="card info-card maintain-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Maintain Cars <span>| Today</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="maintainCarCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Maintain Cars Card -->
+
+                        <!-- Under Maintain  Card -->
+                        <div class="col-xxl-4 col-xl-6">
+                            <div class="card info-card maintain-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Under Maintain Cars <span>| Today</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="underMaintainCarCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Under Maintain Card -->
+
                     </div>
                 </div>
                 <!-- End Left side columns -->
