Booking cards completely added

--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -529,6 +529,60 @@
                         </div>
                         <!-- End Under Maintain Card -->
 
+                        <!-- Booking  Card -->
+                        <div class="col-xxl-4 col-xl-6">
+                            <div class="card info-card booking-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Booking<span>| All Type</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="BookingCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Booking Card -->
+
+                        <!-- Booking Pending Today Card -->
+                        <div class="col-xxl-4 col-xl-6">
+                            <div class="card info-card booking-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Booking Pending<span>| Today</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="BookingPendingCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Booking Today Card -->
+
+                        <!-- Booking Pending Active Card -->
+                        <div class="col-xxl-4 col-xl-6">
+                            <div class="card info-card booking-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Booking Active <span>| Today</span></h5>
+                                    <div class="d-flex align-items-center">
+                                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                            <i class="bi bi-people"></i>
+                                        </div>
+                                        <div class="ps-3">
+                                            <h6 id="BookingActiveCount">0</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Booking Active Card -->
+
                     </div>
                 </div>
                 <!-- End Left side columns -->
