Right side filter card-body added

--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -589,8 +589,20 @@
 
                 <!-- Right side columns -->
                 <div class="col-lg-4">
+
+                    <!-- Recent Activity -->
+                    <div class="card">
+                        <div class="filter">
+                        </div>
+
+                        <div class="card-body">
+                        </div>
+                    </div>
+                    <!-- End Recent Activity -->
+
                 </div>
                 <!-- End Right side columns -->
+
             </div>
         </section>
     </main>
