Right side activity items added

--- a/Front_End/pages/adminDashboard.html
+++ b/Front_End/pages/adminDashboard.html
@@ -609,15 +609,66 @@
                             <h5 class="card-title">Recent Activity <span>| Today</span></h5>
 
                             <div class="activity">
-                            </div>
 
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">40 min</div>
+                                    <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
+                                    <div class="activity-content">
+                                        Add New Car <a href="#" class="fw-bold text-dark">Brand BMW</a>
+                                    </div>
+                                </div>
+                                <!-- End activity item-->
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">56 min</div>
+                                    <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
+                                    <div class="activity-content">
+                                        C00-002 Customer Rent CAR-003
+                                    </div>
+                                </div>
+                                <!-- End activity item-->
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">2 hrs</div>
+                                    <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
+                                    <div class="activity-content">
+                                        C00-010 Customer Rent CAR-007
+                                    </div>
+                                </div>
+                                <!-- End activity item-->
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">40 min</div>
+                                    <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
+                                    <div class="activity-content">
+                                        Add New Car <a href="#" class="fw-bold text-dark">Brand Banz</a>
+                                    </div>
+                                </div>
+                                <!-- End activity item-->
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">2 days</div>
+                                    <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
+                                    <div class="activity-content">
+                                        C00-012 Customer Request a Rent CRI-007 Car.
+                                    </div>
+                                </div>
+                                <!-- End activity item-->
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">2 Days</div>
+                                    <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
+                                    <div class="activity-content">
+                                        Add New Car <a href="#" class="fw-bold text-dark">Brand Banz</a>
+                                    </div>
+                                </div>
+                                <!-- End activity item-->
+                            </div>
                         </div>
                     </div>
                     <!-- End Recent Activity -->
-
                 </div>
                 <!-- End Right side columns -->
-
             </div>
         </section>
     </main>
